la actividad para mañana

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,10 +15,13 @@ COPY . .
 ARG VITE_API_HOST
 ARG VITE_API_PORT
 ARG VITE_API_BASE
+ARG API_PROTOCOL
+
 
 ENV VITE_API_HOST=${VITE_API_HOST}
 ENV VITE_API_PORT=${VITE_API_PORT}
 ENV VITE_API_BASE=${VITE_API_BASE}
+ENV VITE_API_PROTOCOL=${API_PROTOCOL}
 
 # Genera /dist usando las vars de arriba
 RUN npm run build
