--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: adj-database
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: adjdemo
+      MYSQL_DATABASE: adj-demo
     ports:
       - "3307:3306"
     volumes:
@@ -12,6 +12,26 @@ services:
     networks:
       - adj-net
     restart: unless-stopped
+  
+  frontend:
+    image: client:latest
+    build:
+      context: ./client
+      args:
+        API_HOST: localhost
+        API_PORT: 8081
+        API_BASE: /adj-api
+        API_PROTOCOL: https
+    container_name: adj-client
+    ports:
+      - "3000:80"
+    networks:
+      - adj-net
+    volumes:
+      - certbot-conf:/etc/letsencrypt
+    depends_on:
+      - database         # <-- ¡CORRECCIÓN! Frontend depende de Backend
+
 
   backend: # Lo moví arriba para seguir la dependencia
     image: server:latest
@@ -24,32 +44,24 @@ services:
       DB_NAME: adjdemo
       DB_USER: root
       DB_PASS: root
+      SERVER_SSL_ENABLED: true
+      SERVER_SSL_KEYSTORE: /etc/letsencrypt/live/localhost/keystore.p12
+      SERVER_SSL_KEYSTORE_PASS: changeit
     container_name: adj-server
     ports:
       - "8081:8080"
     networks:
       - adj-net
+    volumes:
+      - certbot-conf:/etc/letsencrypt
     depends_on:
-      - database        # <-- ¡CORRECCIÓN! Backend depende de Database
+      - frontend        # <-- ¡CORRECCIÓN! Backend depende de Database
 
-  frontend:
-    image: client:latest
-    build:
-      context: ./client
-      args:
-        API_HOST: localhost
-        API_PORT: 8081
-        API_BASE: /adj-api
-    container_name: adj-client
-    ports:
-      - "3000:80"
-    networks:
-      - adj-net
-    depends_on:
-      - backend         # <-- ¡CORRECCIÓN! Frontend depende de Backend
 #crear el volumen de la base de datos
 volumes:
   adj-volume:
+    external: true
+  cerbot-conf:
     external: true
 
 #crear la red en la que trabajaran los contenedores
